infra.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hugo
spec:
  selector:
    matchLabels:
      app: hugo
  template:
    metadata:
      labels:
        app: hugo
    spec:
      containers:
      - name: git-sync
        image: k8s.gcr.io/git-sync:v3.1.2
        securityContext:
          runAsUser: 65533
        volumeMounts:
        - name: git-checkout
          mountPath: /data
          readOnly: false
      - name: hugo
        image: sachiyer/hugo-server:latest
        securityContext:
          runAsUser: 65533
        volumeMounts:
        - name: git-checkout
          mountPath: /data
          readOnly: false

      volumes:
      - name: git-checkout
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: hugo-service
spec:
  ports:
    - name: web
      port: 1313
      protocol: TCP
  selector:
    app: hugo
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: blog-ingress
spec:
  tls:
  - secretName: blog-cert
  rules:
  - host: blog.sachiniyer.com
    http:
      paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: hugo-service
             port:
               number: 1313
